text align on repertoire page fix for IE10

--- a/src/css/repertoire.css
+++ b/src/css/repertoire.css
@@ -48,6 +48,10 @@
     height: 67px;
     text-align: center;
     display: flex;
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;      /* TWEENER - IE 10 */
+    display: -webkit-flex;     /* NEW - Chrome */
 }
 .repertoire-list li h3 a{
     font-size: 16px;
